# cc-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PUBLISHING.md  README.md  dev.sh  run.sh
config/: openai-chat.example.yaml  openai-responses.example.yaml  proxy.example.yaml
scripts/: build.sh  run-proxy.sh  test-responses-local.sh  test.sh
src/: config.rs  main.rs  sse.rs  streaming.rs  streaming_chat_responses.rs  streaming_responses.rs  transform.rs  transform_responses.rs
