[package]
name = "cc-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Standalone Claude Code proxy for OpenAI-compatible upstreams"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
axum = "0.7"
bytes = "1.6"
env_logger = "0.11"
futures = "0.3"
http = "1"
http-body-util = "0.1"
log = "0.4"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
